monitoring/minio/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console
  namespace: monitoring
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
  hostnames:
    - "minio-console.vanillax.xyz"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: minio-minio-console
          port: 9001
